<MarketingLayout/> - fix height and width when align items stretched (#6698)

--- a/packages/wix-style-react/src/MarketingLayout/MarketingLayout.st.css
+++ b/packages/wix-style-react/src/MarketingLayout/MarketingLayout.st.css
@@ -81,7 +81,10 @@
 }
 
 .root:alignItems(stretch) {
-  display: flex;
+  display: grid;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .root:alignItems(stretch) .contentContainer {
